--- a/performances/performance_test/package.xml
+++ b/performances/performance_test/package.xml
@@ -13,9 +13,11 @@
 
   <build_depend>rclcpp</build_depend>
   <build_depend>performance_test_msgs</build_depend>
+  <build_depend>static_executor</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>performance_test_msgs</exec_depend>
+  <exec_depend>static_executor</exec_depend>
 
   <test_depend>ament_lint_common</test_depend>
   <test_depend>ament_lint_auto</test_depend>
